--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,65 @@
 body {
     background-image: url("../images/img.jpg");
     background-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+}
+
+@media (max-width: 1700px) {
+    body {
+        background-size: auto 1400px;
+        background-position: top;
+    }
+}
+
+#blur {
+    background-color: rgba(0, 0, 150, 0.7);
+    position: absolute;
+    width: 100%;
+}
+#form {
+    width: 60%;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    border-radius: 10px;
+}
+
+.input-wrapper {
+    display: inline-block;
+    width: 80%;
+    margin: auto;
+    color: #FFFFFF;
+    margin-top: 30px;
+}
+.input-label {
+    font-size: 22px;
+}
+.text-input {
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    border-radius: 5px;
+}
+span {
+    font-size: 18px;
+}
+.radio {
+    margin-top: 15px;
+    font-size: 20px;
+}
+.check-box {
+    margin-top: 15px;
+    font-size: 20px;
+}
+#comment-area {
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 15px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
 }
