--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,12 @@ body {
     border-radius: 10px;
 }
 
+@media (max-width: 1000px) {
+    #form {
+        width: 85%;
+    }
+}
+
 .input-wrapper {
     display: inline-block;
     width: 80%;
