--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,13 @@ span {
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
 }
+#submit {
+    width: 100%;
+    height: 40px;
+    background-color: rgb(16, 172, 24);
+    border-style: none;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    color: #FFFFFF;
+}
